@@ -166,3 +166,78 @@ class Test(BaseTest):
         assert self.log_contains("When using the JSON decoder and multiline" +
                                  " together, you need to specify a" +
                                  " message_key value")
+
+    def test_timestamp_in_message(self):
+        """
+        Should be able to make use of a `@timestamp` field if it exists in the
+        message.
+        """
+        self.render_config_template(
+            path=os.path.abspath(self.working_dir) + "/log/*",
+            json=dict(
+                message_key="msg",
+                keys_under_root=True,
+                overwrite_keys=True
+                ),
+        )
+        os.mkdir(self.working_dir + "/log/")
+        self.copy_files(["logs/json_timestamp.log"],
+                        source_dir="../files",
+                        target_dir="log")
+
+        proc = self.start_beat()
+        self.wait_until(
+            lambda: self.output_has(lines=3),
+            max_timeout=10)
+        proc.check_kill_and_wait()
+
+        output = self.read_output()
+        assert len(output) == 3
+        assert all(isinstance(o["@timestamp"], basestring) for o in output)
+        assert all(isinstance(o["type"], basestring) for o in output)
+        assert output[0]["@timestamp"] == "2016-04-05T18:47:18.444Z"
+
+        assert output[1]["@timestamp"] != "invalid"
+        assert output[1]["json_error"] == \
+            "@timestamp not overwritten (parse error on invalid)"
+
+        assert output[2]["json_error"] == \
+            "@timestamp not overwritten (not string)"
+
+    def test_type_in_message(self):
+        """
+        If overwrite_keys is true and type is in the message, we have to
+        be careful to keep it as a valid type name.
+        """
+        self.render_config_template(
+            path=os.path.abspath(self.working_dir) + "/log/*",
+            json=dict(
+                message_key="msg",
+                keys_under_root=True,
+                overwrite_keys=True
+                ),
+        )
+        os.mkdir(self.working_dir + "/log/")
+        self.copy_files(["logs/json_type.log"],
+                        source_dir="../files",
+                        target_dir="log")
+
+        proc = self.start_beat()
+        self.wait_until(
+            lambda: self.output_has(lines=3),
+            max_timeout=10)
+        proc.check_kill_and_wait()
+
+        output = self.read_output()
+        assert len(output) == 3
+        assert all(isinstance(o["@timestamp"], basestring) for o in output)
+        assert all(isinstance(o["type"], basestring) for o in output)
+        assert output[0]["type"] == "test"
+
+        assert output[1]["type"] == "log"
+        assert output[1]["json_error"] == \
+            "type not overwritten (not string)"
+
+        assert output[2]["type"] == "log"
+        assert output[2]["json_error"] == \
+            "type not overwritten (not string)"
